# language-server-protocol

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  start-ls.lua  tox.ini
.github/workflows/: python-package.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/api/: client.rst  common.rst  index.rst  messages.rst  server.rst
docs/source/examples/: index.rst  never-gonna-lsp.rst  spongebob-text-lsp.rst
examples/: fibb_lsp.py  never-gonna-lsp.py  never_gonna_lsp.py  spongebob-text-lsp.py  spongebob_text_lsp.py
lsp/: __init__.py  __main__.py  client.py  protocol.py
lsp/client/: __init__.py  cli.py
lsp/lsp/: __init__.py  client.py  common.py  messages.py  server.py
lspy/: __init__.py  __main__.py  protocol.py
lspy/lsp/: client.py  messages.py  server.py
scripts/: lspsnitch
tests/: conftest.py  test_examples.py  test_language_server.py  test_message.py
