[project]
name = "language_server_protocol"
authors = [{name="Joel Christiansen"}]
version = "0.0.4"
dynamic = ['dependencies']
readme = "README.md"
requires-python = ">=3.11"
license = {file="LICENSE"}
keywords = ['language', 'server', 'protocol']
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

[tool.vulcan]
no-lock = true

[tool.vulcan.dependencies]
ujson = "~=5.7"

[tool.setuptools.packages.find]
include = ["lsp*"]


[build-system]
requires = ["vulcan-py~=2.0"]
build-backend = "vulcan.build_backend"

[tool.mypy]
strict = true

# pytest.ini
[tool.pytest.ini_options]
asyncio_mode = "auto"

